feat: Implement view orders feature, refactor order persistence logic, and add debugging utilities, Also I managed to add a new homepage for the admin user , and I started implementing the usecase ViewAllOrders.